--- a/OpenFonts.Chinese/resume.tex
+++ b/OpenFonts.Chinese/resume.tex
@@ -65,7 +65,7 @@
 %     TITLE NAME
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\namesection{高}{策}{ \urlstyle{same}\href{mailto:whoami@whoareyou.com}{whoami@whoareyou.com} | 1111 1111 111
+\namesection{罗}{逸杰}{ \urlstyle{same}\href{excespo@sjtu.edu.cn}{1849093713@qq.com} | 135 2458 0070
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -84,14 +84,14 @@
 \sectionsep
 
 \subsection{上海交通大学}
-\descript{硕士学位，主修软件工程}
-\location{2016.09-2019.03}
+\descript{硕士学位，主修电子信息}
+\location{2023.09-2026.03}
 \sectionsep
 
 \subsection{上海交通大学}
-\descript{学士学位，主修软件工程}
-\descript{辅修法学}
-\location{2012.09-2016.09}
+\descript{学士学位，主修信息工程}
+% \descript{辅修法学}
+\location{2019.09-2023.09}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
